출생률 요소분석

--- a/birthrate_col_graph.ipynb
+++ b/birthrate_col_graph.ipynb
@@ -57,7 +57,7 @@
     "    plt.title(col+'& Birth rate', fontsize=20)\n",
     "    plt.xlabel('2020 birthrate', fontsize=14)\n",
     "    plt.ylabel(col, fontsize=14)\n",
-    "    plt.yscale('log')\n",
+    "#     plt.yscale('log')\n",
     "    plt.hlines(df[col].mean(),\n",
     "               df['합계출산;2020'].min(),\n",
     "               df['합계출산;2020'].max(),\n",
