--- a/birthrate_col_graph.ipynb
+++ b/birthrate_col_graph.ipynb
@@ -80,6 +80,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def makeGraph_log(df,col):\n",
+    "    if platform.system()==\"Darwin\":\n",
+    "        rcParams['font.family']=['AppleGothic']\n",
+    "    elif platform.system()==\"Window\":\n",
+    "        rcParams['font.family']=['Malgun Gothic']\n",
+    "    rcParams['axes.unicode_minus']=False\n",
+    "    \n",
+    "    plt.rcParams['figure.figsize']=[15,10]\n",
+    "    \n",
+    "    plt.plot('합계출산;2020',\n",
+    "             col,\n",
+    "             data = df, \n",
+    "             linestyle='none', \n",
+    "             marker='o', \n",
+    "             markersize=10,\n",
+    "             color='blue', \n",
+    "             alpha=0.5)\n",
+    "\n",
+    "    plt.title(col+'& Birth rate', fontsize=20)\n",
+    "    plt.xlabel('2020 birthrate', fontsize=14)\n",
+    "    plt.ylabel(col, fontsize=14)\n",
+    "    plt.yscale('log')\n",
+    "    plt.hlines(df[col].mean(),\n",
+    "               df['합계출산;2020'].min(),\n",
+    "               df['합계출산;2020'].max(),\n",
+    "             color='gray',\n",
+    "             linestyle='--',\n",
+    "             linewidth = 2)\n",
+    "    plt.vlines(df['합계출산;2020'].mean(),\n",
+    "               df[col].min(),\n",
+    "               df[col].max(),\n",
+    "             color='gray',\n",
+    "             linestyle='--',\n",
+    "             linewidth = 2)\n",
+    "    \n",
+    "    return plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gdp_birth_gh=makeDataframe('2019;국내총생산(GDP $)',final_data)\n",
     "city_birth_gh=makeDataframe('도시화율;2020',final_data)\n",
     "edu_birth_gh=makeDataframe('평균교육기간(년);2018',final_data)\n",
@@ -90,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -442,6 +486,20 @@
     "#          linewidth = 2)\n",
     "# plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
